@@ -36,6 +36,7 @@ project torrent
 	<threading>multi
 	<toolset>msvc:<cxxflags>/Zc:wchar_t
 	<toolset>msvc:<cxxflags>/Zc:forScope
+	<define>TORRENT_PROFILE
 
 	: usage-requirements 
 
@@ -43,6 +44,7 @@ project torrent
 	<include>$(BOOST_ROOT)
 	<variant>release:<define>NDEBUG
 	<define>BOOST_ALL_NO_LIB
+	<define>TORRENT_PROFILE
 
 	;
 
